--- a/pom.xml
+++ b/pom.xml
@@ -326,6 +326,7 @@
     </dependencies>
 
     <build>
+        <finalName>app</finalName>
         <defaultGoal>spring-boot:run</defaultGoal>
         <testResources>
             <testResource>
